feat：😄在执行程序的命令行中添加启动安全管理器的命令